--- a/config/base.yaml
+++ b/config/base.yaml
@@ -1,12 +1,12 @@
 
 
 # case_name: sheep55-ngptest
-# case_name: truck
+case_name: truck
 # case_name: scan65
 # case_name: ObliqueSBY1580
-# root_dir: /data3/zzy/public_data/${case_name}
+root_dir: /data3/zzy/public_data/${case_name}
 # root_dir: /data3/zzy/data_lab/${case_name}
-root_dir: /data3/zzy/public_data/tankandtemples/intermediate/Family
+# root_dir: /data3/zzy/public_data/tankandtemples/intermediate/Family
 # /data3/zzy/public_data/truck
 
 pipeline:
@@ -54,7 +54,7 @@ optimizer:
   opacity_lr: 5.e-2 # 5.e-2
   scaling_lr: 5.e-4 # 5.e-3
   rotation_lr: 1.e-3
-  percent_dense: 1.e-2
+  percent_dense: 2.e-3
   densification_interval: 100 # 100
   opacity_reset_interval: 3000 # 3000
   densify_from_iter: 500 # 500
