--- a/config/base.yaml
+++ b/config/base.yaml
@@ -32,7 +32,7 @@ neus_model:
 
 
 gs_model:
-  sigma: 2.
+  sigma: 3.
   root_dir: ${root_dir}
   output_dir: ${root_dir}/exp/3dgs
   model_path:
@@ -47,8 +47,8 @@ gs_model:
 
 optimizer:
   iterations: 30000
-  position_lr_init: 1.6e-4
-  position_lr_final: 1.6e-6
+  position_lr_init: 1.6e-4 # 1.6e-4
+  position_lr_final: 1.6e-6 # 1.6e-6
   position_lr_delay_mult: 0.01
   position_lr_max_steps: 30_00
   feature_lr: 2.5e-3
@@ -65,7 +65,7 @@ optimizer:
 loss:
   lambda_rgb_nerf: 1.
   lambda_rgb_gs: 1.
-  lambda_ssim: 0.25
+  lambda_ssim: 0.2
   lambda_eikonal: 0.
   lambda_s3im: 0.
 
